refactor: Migrate JavaEE to JakartaEE (#573)
This large change performs the necessary steps to migrate JavaEE related code (javax namespace) to JakartaEE (jakarta namespace). This changes imports throughout the code base.

It further streamlines management of dependencies by a cleaner internal-dependencies BOM, which is consequently used and avoiding using different and explicit versions of libraries.

Adjusted to API changes from libraries.

Tests are using now `org.wiremock:wiremock-standalone` instead of `org.wiremock:wiremock-standalone`.

Upgrade Jetty 11.0.24 -> 12.0.16

---------

Co-authored-by: Wolfgang Schmoller <wolfgang.schmoller@itemis.com>
Co-authored-by: Karsten Thoms <thoms@itemis.de>